<resources>
    <string name="app_name">MOV-Application</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="lewati_perkenalan">Lewati Perkenalan</string>
    <string name="now_playing">Now Playing</string>
    <string name="pre_sale">Pre Sale</string>
    <string name="cashless">Cashless</string>
    <string name="memulai">Memulai</string>
    <string name="now_playing_desc">Lebih mudah untuk mengetahui <br />  film yang sedang tampil</string>
    <string name="pre_sale_desc">Tidak khawatir ketinggalan <br /> update film terbaru</string>
    <string name="cashless_desc">Gunakan e-wallet untuk <br /> transaksi tiket nonton</string>
    <string name="signin">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="masuk_akun">Masuk Akun</string>
    <string name="daftar_akun_baru">Daftar Akun Baru</string>
    <string name="signup">Sign Up</string>
    <string name="email">Email</string>
    <string name="nama">Nama</string>
    <string name="welcome">Welcome,</string>
    <string name="photo">Photo</string>
    <string name="storyboard">Storyboard</string>
    <string name="whosplayed">Who\'s Played</string>
    <string name="pilihbangku">Pilih Bangku</string>
    <string name="beli_tiket">Beli Tiket</string>
    <string name="layar_bioskop">Layar Bioskop</string>
    <string name="empty">Empty</string>
    <string name="booked">Booked</string>
    <string name="selected">Selected</string>
    <string name="checkout">Checkout</string>
    <string name="bayar_sekarang">Bayar Sekarang</string>
    <string name="batalkan">Batalkan</string>
    <string name="when">When</string>
    <string name="dateandtime"><![CDATA[Date & Time]]></string>
    <string name="cinema">Cinema</string>
    <string name="items">Items</string>
    <string name="total_bayar">Total Harus Dibayar</string>
    <string name="ewallet">E-Wallet</string>
    <string name="total_balance">Total Balance</string>
    <string name="checkout_failed">Saldo pada e-wallet kamu tidak mencukupi untuk melakukan transaksi</string>
    <string name="home">Home</string>
    <string name="lihat_tiket">Lihat Tiket</string>
    <string name="happy_watching">Happy Watching</string>
    <string name="ticket_success_desc">Tiket telah berhasil dibeli dan selamat menikmati film</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="simpan_data_baru">Simpan Data Baru</string>
    <string name="my_wallet">My Wallet</string>
    <string name="saldo_tersedia">Saldo Tersedia</string>
    <string name="riwayat_transaksi">Riwayat Transaksi</string>
    <string name="my_history">My History</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="upload_nanti">Upload Nanti</string>
    <string name="masuk_akun_baru">Masuk Akun Baru</string>
</resources>